// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header test 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontFamily": "Roboto",
    }
  }
/>
`;

exports[`normal test 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontFamily": "serif",
    }
  }
/>
`;
